# singlefile-click-app

./: README.md
{{cookiecutter.hyphenated}}/: .pre-commit-config.yaml  README.md  pyproject.toml  {{cookiecutter.hyphenated}}.py
{{cookiecutter.hyphenated}}/.github/workflows/: build.yml  check-format.yml  check-import-sorting.yml  check-unused.yml  lint.yml  release.yml  security-scan.yml  test.yml
